--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -29,7 +29,14 @@ jobs:
         cache: maven
     - name: Build with Maven
       run: ./mvnw verify
+
      # run: mvn -B package --file pom.xml
+    - if: ${{ github.ref == 'refs/heads/main' }}
+      name: Build and Publish Docker Image
+      run: |
+          ./mvnw clean package jib:dockerBuild -DskipTests
+          docker login -u ${{ secrets.DOCKER_USERNAME }} -p ${{ secrets.DOCKER_PASSWORD }}
+          docker push ${{ secrets.DOCKER_USERNAME }}/bookmarker-api
 
     # Optional: Uploads the full dependency graph to GitHub to improve the quality of Dependabot alerts this repository can receive
     - name: Update dependency graph
