--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -30,7 +30,7 @@ jobs:
           cache: 'maven'
 
       - name: Build with Maven
-        run: mvnw verify
+        run: mvn clean install
 
       - if: ${{ github.ref == 'refs/heads/main' }}
         name: Build and Publish Docker Image
