--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -16,7 +16,7 @@ on:
 
 jobs:
   build-bookmarker-api:
-    name: Build bookmarker-api
+    name: Build rutusofttraining/book-marker-api
     runs-on: ubuntu-latest
 
     steps:
@@ -30,8 +30,9 @@ jobs:
           cache: 'maven'
 
       - name: Build with Maven
-        run: mvn clean install
-
+        run: |
+          chmod +x ./mvnw
+          ./mvnw verify
       - if: ${{ github.ref == 'refs/heads/main' }}
         name: Build and Publish Docker Image
         run: |
