--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -36,7 +36,8 @@ jobs:
       - if: ${{ github.ref == 'refs/heads/main' }}
         name: Build and Publish Docker Image
         run: |
-          chmod +x ./mvnw
-          ./mvnw clean package jib:dockerBuild -DskipTests
+          #chmod +x ./mvnw
+          #./mvnw clean package jib:dockerBuild -DskipTests
+          docker build -t ${{ secrets.DOCKER_USERNAME }}/bookmarker-api .
           docker login -u ${{ secrets.DOCKER_USERNAME }} -p ${{ secrets.DOCKER_PASSWORD }}
           docker push ${{ secrets.DOCKER_USERNAME }}/bookmarker-api:latest
